--- a/style/main.css
+++ b/style/main.css
@@ -600,6 +600,10 @@ html {
   display: flex;
 }
 
+.h-80 {
+  height: 20rem;
+}
+
 .h-96 {
   height: 24rem;
 }
@@ -610,6 +614,10 @@ html {
 
 .min-h-full {
   min-height: 100%;
+}
+
+.w-80 {
+  width: 20rem;
 }
 
 .w-96 {
@@ -634,6 +642,10 @@ html {
 
 .flex-auto {
   flex: 1 1 auto;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -679,6 +691,10 @@ html {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-visible {
+  overflow: visible;
 }
 
 .rounded-full {
@@ -881,11 +897,6 @@ html {
   .dark\:text-gray {
     --tw-text-opacity: 1;
     color: rgb(168 168 168 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
 
