--- a/style/main.css
+++ b/style/main.css
@@ -556,104 +556,36 @@ html,
   position: relative;
 }
 
+.-right-\[90px\] {
+  right: -90px;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
-}
-
-.left-5 {
-  left: 1.25rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.left-80 {
-  left: 20rem;
-}
-
-.top-40 {
-  top: 10rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
-}
-
-.left-96 {
-  left: 24rem;
-}
-
-.-top-12 {
-  top: -3rem;
-}
-
-.-bottom-12 {
-  bottom: -3rem;
-}
-
-.right-80 {
-  right: 20rem;
-}
-
-.right-8 {
-  right: 2rem;
-}
-
-.-right-40 {
-  right: -10rem;
-}
-
-.-top-40 {
-  top: -10rem;
-}
-
-.right-\[20px\] {
-  right: 20px;
-}
-
-.top-\[180px\] {
-  top: 180px;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.right-\[40px\] {
-  right: 40px;
-}
-
-.right-\[10px\] {
-  right: 10px;
 }
 
 .left-0 {
   left: 0px;
 }
 
-.top-\[80px\] {
-  top: 80px;
+.left-5 {
+  left: 1.25rem;
 }
 
-.right-\[90px\] {
-  right: 90px;
+.right-\[10px\] {
+  right: 10px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.top-\[80px\] {
+  top: 80px;
 }
 
 .isolate {
@@ -702,12 +634,8 @@ html,
   margin-top: 1.5rem;
 }
 
-.ml-12 {
-  margin-left: 3rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .block {
@@ -726,10 +654,6 @@ html,
   display: none;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-48 {
   height: 12rem;
 }
@@ -738,24 +662,16 @@ html,
   height: 100%;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-\[57px\] {
-  height: 57px;
-}
-
 .min-h-full {
   min-height: 100%;
 }
 
-.min-h-\[57px\] {
-  min-height: 57px;
-}
-
 .w-48 {
   width: 12rem;
+}
+
+.w-\[600px\] {
+  width: 600px;
 }
 
 .w-auto {
@@ -766,36 +682,8 @@ html,
   width: 100%;
 }
 
-.w-\[57px\] {
-  width: 57px;
-}
-
-.w-\[450px\] {
-  width: 450px;
-}
-
-.w-\[550px\] {
-  width: 550px;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
-.w-\[600px\] {
-  width: 600px;
-}
-
-.w-\[520px\] {
-  width: 520px;
-}
-
 .min-w-full {
   min-width: 100%;
-}
-
-.min-w-\[57px\] {
-  min-width: 57px;
 }
 
 .max-w-7xl {
@@ -814,46 +702,14 @@ html,
   flex: 1 1 auto;
 }
 
-.rotate-90 {
-  --tw-rotate: 90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-45 {
-  --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-12 {
-  --tw-rotate: -12deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-45 {
-  --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .rotate-\[340deg\] {
   --tw-rotate: 340deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.scale-50 {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-90 {
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-75 {
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
+.scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -934,16 +790,16 @@ html,
   overflow: visible;
 }
 
+.rounded-\[12px\] {
+  border-radius: 12px;
+}
+
 .rounded-\[57px\] {
   border-radius: 57px;
 }
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-\[12px\] {
-  border-radius: 12px;
 }
 
 .bg-gray-1 {
@@ -959,16 +815,6 @@ html,
 .bg-gray-8 {
   --tw-bg-opacity: 1;
   background-color: rgb(52 58 64 / var(--tw-bg-opacity));
-}
-
-.bg-gray-9 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 37 41 / var(--tw-bg-opacity));
-}
-
-.bg-gray-7 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(73 80 87 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -992,18 +838,14 @@ html,
   padding: 1.5rem;
 }
 
-.p-12 {
-  padding: 3rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
 
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1021,6 +863,11 @@ html,
   padding-bottom: 6rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -1029,29 +876,6 @@ html,
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
 }
 
 .pr-3 {
@@ -1106,16 +930,16 @@ html,
   font-weight: 300;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .font-normal {
   font-weight: 400;
 }
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-medium {
-  font-weight: 500;
 }
 
 .leading-7 {
@@ -1191,6 +1015,11 @@ html,
 .ring-gray-9 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
+}
+
+.grayscale {
+  --tw-grayscale: grayscale(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 @font-face {
