--- a/style/main.css
+++ b/style/main.css
@@ -556,36 +556,12 @@ html,
   position: relative;
 }
 
-.-right-\[90px\] {
-  right: -90px;
-}
-
 .bottom-5 {
   bottom: 1.25rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
 .left-5 {
   left: 1.25rem;
-}
-
-.right-\[10px\] {
-  right: 10px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[80px\] {
-  top: 80px;
 }
 
 .isolate {
@@ -622,8 +598,8 @@ html,
   margin-top: 2.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .mt-4 {
@@ -632,10 +608,6 @@ html,
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
 }
 
 .block {
@@ -670,10 +642,6 @@ html,
   width: 12rem;
 }
 
-.w-\[600px\] {
-  width: 600px;
-}
-
 .w-auto {
   width: auto;
 }
@@ -700,17 +668,6 @@ html,
 
 .flex-auto {
   flex: 1 1 auto;
-}
-
-.rotate-\[340deg\] {
-  --tw-rotate: 340deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-110 {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -790,10 +747,6 @@ html,
   overflow: visible;
 }
 
-.rounded-\[12px\] {
-  border-radius: 12px;
-}
-
 .rounded-\[57px\] {
   border-radius: 57px;
 }
@@ -827,11 +780,6 @@ html,
 
 .bg-no-repeat {
   background-repeat: no-repeat;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-6 {
@@ -1017,11 +965,6 @@ html,
   --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
 }
 
-.grayscale {
-  --tw-grayscale: grayscale(100%);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 @font-face {
   font-family: "jokker";
 
@@ -1114,6 +1057,14 @@ html,
     margin-top: 10rem;
   }
 
+  .md\:h-72 {
+    height: 18rem;
+  }
+
+  .md\:w-72 {
+    width: 18rem;
+  }
+
   .md\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
@@ -1190,16 +1141,8 @@ html,
     display: none;
   }
 
-  .lg\:h-80 {
-    height: 20rem;
-  }
-
   .lg\:h-96 {
     height: 24rem;
-  }
-
-  .lg\:w-80 {
-    width: 20rem;
   }
 
   .lg\:w-96 {
