--- a/style/main.css
+++ b/style/main.css
@@ -634,6 +634,14 @@ html,
   height: 100%;
 }
 
+.min-h-card_1_row_mobile {
+  min-height: 18rem;
+}
+
+.min-h-card_2_row_mobile {
+  min-height: 18rem;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -945,6 +953,17 @@ html,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-gray-8 {
+  --tw-shadow-color: #343A40;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -963,6 +982,20 @@ html,
 .ring-gray-9 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
+}
+
+.transition-shadow {
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 @font-face {
@@ -1004,6 +1037,18 @@ html,
 .hover\:text-gray-1:hover {
   --tw-text-opacity: 1;
   color: rgb(248 249 250 / var(--tw-text-opacity));
+}
+
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (min-width: 640px) {
@@ -1061,6 +1106,14 @@ html,
     height: 18rem;
   }
 
+  .md\:min-h-card_1_row {
+    min-height: 22rem;
+  }
+
+  .md\:min-h-card_2_row {
+    min-height: 39rem;
+  }
+
   .md\:w-72 {
     width: 18rem;
   }
@@ -1092,6 +1145,11 @@ html,
     font-size: 1.5rem;
     line-height: 2rem;
   }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1101,6 +1159,10 @@ html,
 
   .lg\:order-2 {
     order: 2;
+  }
+
+  .lg\:order-3 {
+    order: 3;
   }
 
   .lg\:col-span-2 {
@@ -1127,6 +1189,10 @@ html,
 
   .lg\:mt-12 {
     margin-top: 3rem;
+  }
+
+  .lg\:mb-12 {
+    margin-bottom: 3rem;
   }
 
   .lg\:block {
