--- a/style/main.css
+++ b/style/main.css
@@ -610,6 +610,26 @@ html,
   margin-top: 1.5rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-28 {
+  margin-bottom: 7rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mt-64 {
+  margin-top: 16rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
+}
+
 .block {
   display: block;
 }
@@ -634,6 +654,10 @@ html,
   height: 100%;
 }
 
+.h-\[2px\] {
+  height: 2px;
+}
+
 .min-h-card_1_row_mobile {
   min-height: 18rem;
 }
@@ -656,6 +680,22 @@ html,
 
 .w-full {
   width: 100%;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-\[680px\] {
+  width: 680px;
 }
 
 .min-w-full {
@@ -730,6 +770,22 @@ html,
   gap: 1rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
 .gap-x-12 {
   -moz-column-gap: 3rem;
        column-gap: 3rem;
@@ -763,6 +819,26 @@ html,
   border-radius: 9999px;
 }
 
+.rounded-\[88px\] {
+  border-radius: 88px;
+}
+
+.rounded-tl-\[88px\] {
+  border-top-left-radius: 88px;
+}
+
+.rounded-tr-\[88px\] {
+  border-top-right-radius: 88px;
+}
+
+.rounded-tl-\[44px\] {
+  border-top-left-radius: 44px;
+}
+
+.rounded-tr-\[44px\] {
+  border-top-right-radius: 44px;
+}
+
 .bg-gray-1 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 250 / var(--tw-bg-opacity));
@@ -778,6 +854,11 @@ html,
   background-color: rgb(52 58 64 / var(--tw-bg-opacity));
 }
 
+.bg-gray-9 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -788,6 +869,11 @@ html,
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-6 {
@@ -834,8 +920,27 @@ html,
   padding-bottom: 2rem;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
+.py-64 {
+  padding-top: 16rem;
+  padding-bottom: 16rem;
+}
+
 .pr-3 {
   padding-right: 0.75rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-2xl {
@@ -947,21 +1052,15 @@ html,
   color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 
+.text-gray-1 {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 250 / var(--tw-text-opacity));
+}
+
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-gray-8 {
-  --tw-shadow-color: #343A40;
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .outline-none {
@@ -984,14 +1083,15 @@ html,
   --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
 }
 
+.ring-gray-1 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(248 249 250 / var(--tw-ring-opacity));
+}
+
 .transition-shadow {
   transition-property: box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
 }
 
 .duration-500 {
@@ -1029,9 +1129,19 @@ html,
       format("woff");
 }
 
+.hover\:border-gray-1:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 249 250 / var(--tw-border-opacity));
+}
+
 .hover\:bg-gray-9:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-1:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-1:hover {
@@ -1039,10 +1149,9 @@ html,
   color: rgb(248 249 250 / var(--tw-text-opacity));
 }
 
-.hover\:shadow-lg:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hover\:text-gray-9:hover {
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-md:hover {
@@ -1051,7 +1160,27 @@ html,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:ring-1:hover {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.hover\:ring-gray-1:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(248 249 250 / var(--tw-ring-opacity));
+}
+
+.hover\:ring-gray-9:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
+}
+
 @media (min-width: 640px) {
+  .sm\:w-full {
+    width: 100%;
+  }
+
   .sm\:py-64 {
     padding-top: 16rem;
     padding-bottom: 16rem;
@@ -1102,6 +1231,10 @@ html,
     margin-top: 10rem;
   }
 
+  .md\:mt-28 {
+    margin-top: 7rem;
+  }
+
   .md\:h-72 {
     height: 18rem;
   }
@@ -1118,12 +1251,32 @@ html,
     width: 18rem;
   }
 
+  .md\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .md\:w-\[680px\] {
+    width: 680px;
+  }
+
   .md\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .md\:rounded-tl-\[88px\] {
+    border-top-left-radius: 88px;
+  }
+
+  .md\:rounded-tr-\[88px\] {
+    border-top-right-radius: 88px;
   }
 
   .md\:px-16 {
@@ -1141,6 +1294,11 @@ html,
     padding-bottom: 3rem;
   }
 
+  .md\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1149,6 +1307,11 @@ html,
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -1187,12 +1350,24 @@ html,
     margin-right: auto;
   }
 
+  .lg\:mb-12 {
+    margin-bottom: 3rem;
+  }
+
   .lg\:mt-12 {
     margin-top: 3rem;
   }
 
-  .lg\:mb-12 {
-    margin-bottom: 3rem;
+  .lg\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .lg\:mt-40 {
+    margin-top: 10rem;
+  }
+
+  .lg\:mt-64 {
+    margin-top: 16rem;
   }
 
   .lg\:block {
@@ -1213,6 +1388,10 @@ html,
 
   .lg\:w-96 {
     width: 24rem;
+  }
+
+  .lg\:w-\[680px\] {
+    width: 680px;
   }
 
   .lg\:max-w-none {
@@ -1253,6 +1432,11 @@ html,
     padding-bottom: 4rem;
   }
 
+  .lg\:py-64 {
+    padding-top: 16rem;
+    padding-bottom: 16rem;
+  }
+
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1261,6 +1445,16 @@ html,
   .lg\:text-8xl {
     font-size: 6rem;
     line-height: 1;
+  }
+
+  .lg\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:leading-relaxed {
