--- a/style/main.css
+++ b/style/main.css
@@ -594,6 +594,15 @@ html,
   margin-bottom: 5rem;
 }
 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.mb-28 {
+  margin-bottom: 7rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -606,28 +615,32 @@ html,
   margin-top: 1rem;
 }
 
+.mt-40 {
+  margin-top: 10rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-20 {
   margin-bottom: 5rem;
 }
 
-.mb-28 {
-  margin-bottom: 7rem;
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
-.mt-28 {
-  margin-top: 7rem;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
-.mt-64 {
-  margin-top: 16rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -650,12 +663,12 @@ html,
   height: 12rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-\[2px\] {
   height: 2px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .min-h-card_1_row_mobile {
@@ -680,22 +693,6 @@ html,
 
 .w-full {
   width: 100%;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[600px\] {
-  width: 600px;
-}
-
-.w-\[680px\] {
-  width: 680px;
 }
 
 .min-w-full {
@@ -762,6 +759,10 @@ html,
   gap: 0.5rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
 .gap-28 {
   gap: 7rem;
 }
@@ -770,20 +771,16 @@ html,
   gap: 1rem;
 }
 
-.gap-20 {
-  gap: 5rem;
-}
-
-.gap-12 {
-  gap: 3rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-10 {
   gap: 2.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-x-12 {
@@ -811,24 +808,16 @@ html,
   overflow: visible;
 }
 
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
 .rounded-\[57px\] {
   border-radius: 57px;
 }
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-\[88px\] {
-  border-radius: 88px;
-}
-
-.rounded-tl-\[88px\] {
-  border-top-left-radius: 88px;
-}
-
-.rounded-tr-\[88px\] {
-  border-top-right-radius: 88px;
 }
 
 .rounded-tl-\[44px\] {
@@ -847,6 +836,11 @@ html,
 .bg-gray-2 {
   --tw-bg-opacity: 1;
   background-color: rgb(233 236 239 / var(--tw-bg-opacity));
+}
+
+.bg-gray-3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(222 226 230 / var(--tw-bg-opacity));
 }
 
 .bg-gray-8 {
@@ -869,6 +863,10 @@ html,
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.fill-gray-2 {
+  fill: #E9ECEF;
 }
 
 .object-cover {
@@ -900,9 +898,19 @@ html,
   padding-right: 1.5rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
+}
+
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
 }
 
 .py-3 {
@@ -918,21 +926,6 @@ html,
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.py-28 {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.py-64 {
-  padding-top: 16rem;
-  padding-bottom: 16rem;
 }
 
 .pr-3 {
@@ -1019,12 +1012,21 @@ html,
   line-height: 1.15;
 }
 
+.tracking-normal {
+  letter-spacing: 0em;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
 }
 
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+
+.text-gray-1 {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 250 / var(--tw-text-opacity));
 }
 
 .text-gray-6 {
@@ -1052,11 +1054,6 @@ html,
   color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 
-.text-gray-1 {
-  --tw-text-opacity: 1;
-  color: rgb(248 249 250 / var(--tw-text-opacity));
-}
-
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -1078,14 +1075,14 @@ html,
   --tw-ring-inset: inset;
 }
 
-.ring-gray-9 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
-}
-
 .ring-gray-1 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(248 249 250 / var(--tw-ring-opacity));
+}
+
+.ring-gray-9 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
 }
 
 .transition-shadow {
@@ -1094,8 +1091,28 @@ html,
   transition-duration: 150ms;
 }
 
+.delay-75 {
+  transition-delay: 75ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 @font-face {
@@ -1129,9 +1146,18 @@ html,
       format("woff");
 }
 
-.hover\:border-gray-1:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(248 249 250 / var(--tw-border-opacity));
+.usecase-in {
+  transform: translateY(40);
+}
+
+.usecase-out {
+  transform: translateY(0);
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-gray-9:hover {
@@ -1139,19 +1165,13 @@ html,
   background-color: rgb(33 37 41 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-1:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+.hover\:fill-gray-3:hover {
+  fill: #DEE2E6;
 }
 
 .hover\:text-gray-1:hover {
   --tw-text-opacity: 1;
   color: rgb(248 249 250 / var(--tw-text-opacity));
-}
-
-.hover\:text-gray-9:hover {
-  --tw-text-opacity: 1;
-  color: rgb(33 37 41 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-md:hover {
@@ -1160,25 +1180,14 @@ html,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:ring-1:hover {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .hover\:ring-gray-1:hover {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(248 249 250 / var(--tw-ring-opacity));
 }
 
-.hover\:ring-gray-9:hover {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(33 37 41 / var(--tw-ring-opacity));
-}
-
 @media (min-width: 640px) {
-  .sm\:w-full {
-    width: 100%;
+  .sm\:gap-8 {
+    gap: 2rem;
   }
 
   .sm\:py-64 {
@@ -1222,17 +1231,20 @@ html,
     grid-row: span 4 / span 4;
   }
 
-  .md\:my-28 {
+  .md\:mt-28 {
     margin-top: 7rem;
-    margin-bottom: 7rem;
   }
 
   .md\:mt-40 {
     margin-top: 10rem;
   }
 
-  .md\:mt-28 {
-    margin-top: 7rem;
+  .md\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
   }
 
   .md\:h-72 {
@@ -1251,10 +1263,6 @@ html,
     width: 18rem;
   }
 
-  .md\:w-\[400px\] {
-    width: 400px;
-  }
-
   .md\:w-\[680px\] {
     width: 680px;
   }
@@ -1267,8 +1275,28 @@ html,
     flex-direction: row;
   }
 
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
   .md\:gap-10 {
     gap: 2.5rem;
+  }
+
+  .md\:gap-20 {
+    gap: 5rem;
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
+  }
+
+  .md\:overflow-x-hidden {
+    overflow-x: hidden;
   }
 
   .md\:rounded-tl-\[88px\] {
@@ -1294,11 +1322,6 @@ html,
     padding-bottom: 3rem;
   }
 
-  .md\:py-16 {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-  }
-
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1309,9 +1332,9 @@ html,
     line-height: 2.25rem;
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1358,10 +1381,6 @@ html,
     margin-top: 3rem;
   }
 
-  .lg\:mt-20 {
-    margin-top: 5rem;
-  }
-
   .lg\:mt-40 {
     margin-top: 10rem;
   }
@@ -1390,14 +1409,6 @@ html,
     width: 24rem;
   }
 
-  .lg\:w-\[680px\] {
-    width: 680px;
-  }
-
-  .lg\:max-w-none {
-    max-width: none;
-  }
-
   .lg\:flex-1 {
     flex: 1 1 0%;
   }
@@ -1416,6 +1427,10 @@ html,
 
   .lg\:gap-64 {
     gap: 16rem;
+  }
+
+  .lg\:gap-20 {
+    gap: 5rem;
   }
 
   .lg\:gap-y-0 {
@@ -1442,19 +1457,19 @@ html,
     line-height: 2.25rem;
   }
 
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .lg\:text-8xl {
     font-size: 6rem;
     line-height: 1;
   }
 
-  .lg\:text-9xl {
-    font-size: 8rem;
-    line-height: 1;
-  }
-
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .lg\:leading-relaxed {
