--- a/style/main.css
+++ b/style/main.css
@@ -564,6 +564,10 @@ html,
   left: 1.25rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .isolate {
   isolation: isolate;
 }
@@ -589,18 +593,16 @@ html,
   margin-right: auto;
 }
 
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
-.my-12 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .mb-28 {
   margin-bottom: 7rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mt-10 {
@@ -621,22 +623,6 @@ html,
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .mt-8 {
@@ -759,10 +745,6 @@ html,
   gap: 0.5rem;
 }
 
-.gap-20 {
-  gap: 5rem;
-}
-
 .gap-28 {
   gap: 7rem;
 }
@@ -773,14 +755,6 @@ html,
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
 }
 
 .gap-x-12 {
@@ -828,6 +802,11 @@ html,
   border-top-right-radius: 44px;
 }
 
+.bg-\[\#0078C0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 120 192 / var(--tw-bg-opacity));
+}
+
 .bg-gray-1 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 250 / var(--tw-bg-opacity));
@@ -838,11 +817,6 @@ html,
   background-color: rgb(233 236 239 / var(--tw-bg-opacity));
 }
 
-.bg-gray-3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(222 226 230 / var(--tw-bg-opacity));
-}
-
 .bg-gray-8 {
   --tw-bg-opacity: 1;
   background-color: rgb(52 58 64 / var(--tw-bg-opacity));
@@ -851,18 +825,6 @@ html,
 .bg-gray-9 {
   --tw-bg-opacity: 1;
   background-color: rgb(33 37 41 / var(--tw-bg-opacity));
-}
-
-.bg-cover {
-  background-size: cover;
-}
-
-.bg-center {
-  background-position: center;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
 }
 
 .fill-gray-2 {
@@ -1095,20 +1057,16 @@ html,
   transition-delay: 75ms;
 }
 
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
 
 .duration-500 {
   transition-duration: 500ms;
-}
-
-.duration-700 {
-  transition-duration: 700ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
 }
 
 .ease-out {
@@ -1186,10 +1144,6 @@ html,
 }
 
 @media (min-width: 640px) {
-  .sm\:gap-8 {
-    gap: 2rem;
-  }
-
   .sm\:py-64 {
     padding-top: 16rem;
     padding-bottom: 16rem;
@@ -1231,20 +1185,20 @@ html,
     grid-row: span 4 / span 4;
   }
 
-  .md\:mt-28 {
-    margin-top: 7rem;
-  }
-
-  .md\:mt-40 {
-    margin-top: 10rem;
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
   }
 
   .md\:mt-20 {
     margin-top: 5rem;
   }
 
-  .md\:mb-10 {
-    margin-bottom: 2.5rem;
+  .md\:mt-28 {
+    margin-top: 7rem;
+  }
+
+  .md\:mt-40 {
+    margin-top: 10rem;
   }
 
   .md\:h-72 {
@@ -1275,24 +1229,16 @@ html,
     flex-direction: row;
   }
 
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
   .md\:gap-10 {
     gap: 2.5rem;
   }
 
-  .md\:gap-20 {
-    gap: 5rem;
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:gap-8 {
     gap: 2rem;
-  }
-
-  .md\:gap-4 {
-    gap: 1rem;
   }
 
   .md\:overflow-x-hidden {
@@ -1425,12 +1371,12 @@ html,
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
-  .lg\:gap-64 {
-    gap: 16rem;
-  }
-
   .lg\:gap-20 {
     gap: 5rem;
+  }
+
+  .lg\:gap-64 {
+    gap: 16rem;
   }
 
   .lg\:gap-y-0 {
