--- a/style/main.css
+++ b/style/main.css
@@ -816,11 +816,6 @@ html,
   border-top-right-radius: 44px;
 }
 
-.bg-\[\#0078C0\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 120 192 / var(--tw-bg-opacity));
-}
-
 .bg-gray-1 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 250 / var(--tw-bg-opacity));
@@ -1348,6 +1343,11 @@ html,
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1399,6 +1399,10 @@ html,
 
   .lg\:mt-64 {
     margin-top: 16rem;
+  }
+
+  .lg\:mt-20 {
+    margin-top: 5rem;
   }
 
   .lg\:block {
@@ -1484,8 +1488,17 @@ html,
     line-height: 1.75rem;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:leading-relaxed {
     line-height: 1.625;
+  }
+
+  .lg\:leading-tighter {
+    line-height: 1.15;
   }
 }
 
