--- a/style/main.css
+++ b/style/main.css
@@ -560,20 +560,12 @@ html,
   bottom: 1.25rem;
 }
 
-.left-5 {
-  left: 1.25rem;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .left-1\/2 {
   left: 50%;
+}
+
+.left-5 {
+  left: 1.25rem;
 }
 
 .top-1\/2 {
@@ -621,28 +613,20 @@ html,
   margin-top: 2.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .mt-40 {
   margin-top: 10rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .block {
@@ -681,12 +665,32 @@ html,
   min-height: 18rem;
 }
 
-.min-h-full {
-  min-height: 100%;
+.min-h-\[200px\] {
+  min-height: 200px;
 }
 
 .w-48 {
   width: 12rem;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-\[80px\] {
+  width: 80px;
 }
 
 .w-auto {
@@ -705,10 +709,6 @@ html,
   max-width: 0rem;
 }
 
-.max-w-7xl {
-  max-width: 80rem;
-}
-
 .max-w-8xl {
   max-width: 88rem;
 }
@@ -721,8 +721,9 @@ html,
   max-width: 100%;
 }
 
-.flex-auto {
-  flex: 1 1 auto;
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-x-4 {
@@ -730,18 +731,13 @@ html,
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-0 {
-  --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-0 {
+  --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -789,6 +785,10 @@ html,
   gap: 0.5rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
 .gap-28 {
   gap: 7rem;
 }
@@ -810,6 +810,10 @@ html,
   row-gap: 3rem;
 }
 
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
 .self-end {
   align-self: flex-end;
 }
@@ -828,6 +832,10 @@ html,
 
 .overflow-x-scroll {
   overflow-x: scroll;
+}
+
+.rounded-\[47px\] {
+  border-radius: 47px;
 }
 
 .rounded-\[57px\] {
@@ -875,10 +883,6 @@ html,
      object-fit: cover;
 }
 
-.p-6 {
-  padding: 1.5rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -902,11 +906,6 @@ html,
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
 }
 
 .py-28 {
@@ -946,24 +945,13 @@ html,
   line-height: 2rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-\[520px\] {
+  font-size: 520px;
 }
 
 .text-lg {
@@ -981,10 +969,6 @@ html,
   line-height: 1.75rem;
 }
 
-.text-\[520px\] {
-  font-size: 520px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -999,18 +983,6 @@ html,
 
 .font-normal {
   font-weight: 400;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.leading-7 {
-  line-height: 1.75rem;
-}
-
-.leading-8 {
-  line-height: 2rem;
 }
 
 .leading-relaxed {
@@ -1038,14 +1010,14 @@ html,
   color: rgb(248 249 250 / var(--tw-text-opacity));
 }
 
+.text-gray-2 {
+  --tw-text-opacity: 1;
+  color: rgb(233 236 239 / var(--tw-text-opacity));
+}
+
 .text-gray-6 {
   --tw-text-opacity: 1;
   color: rgb(108 117 125 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-gray-9 {
@@ -1053,29 +1025,9 @@ html,
   color: rgb(33 37 41 / var(--tw-text-opacity));
 }
 
-.text-gray-900 {
+.text-gray-7 {
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-
-.text-gray-4 {
-  --tw-text-opacity: 1;
-  color: rgb(206 212 218 / var(--tw-text-opacity));
-}
-
-.text-gray-3 {
-  --tw-text-opacity: 1;
-  color: rgb(222 226 230 / var(--tw-text-opacity));
-}
-
-.text-gray-2 {
-  --tw-text-opacity: 1;
-  color: rgb(233 236 239 / var(--tw-text-opacity));
+  color: rgb(73 80 87 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1206,6 +1158,8 @@ html,
       format("woff");
 }
 
+/* ANIMATION */
+
 .usecase-in {
   transform: translateY(40);
 }
@@ -1220,6 +1174,62 @@ html,
 
 .explore-out {
   width: auto;
+}
+
+/* FEATURES */
+
+.features {
+  display: grid;
+  @media (min-width: 1024px) {
+    min-height: 80svh;
+
+    gap: 1rem;
+
+    grid-template-areas:
+      "alt alt alt alt alt oms oms"
+      "alt alt alt alt alt oms oms"
+      "alt alt alt alt alt oms oms"
+      "alt alt alt alt alt oms oms"
+      "hel hel hel spl spl spl spl"
+      "hel hel hel spl spl spl spl"
+      "hel hel hel inv inv mad mad"
+      "hel hel hel inv inv mad mad";
+  }
+  gap: 0.5rem;
+  min-height: 70svh;
+  grid-template-areas:
+    "alt alt alt alt oms oms oms"
+    "alt alt alt alt oms oms oms"
+    "alt alt alt alt oms oms oms"
+    "alt alt alt alt oms oms oms"
+    "mad mad mad spl spl spl spl"
+    "mad mad mad spl spl spl spl"
+    "inv inv inv hel hel hel hel"
+    "inv inv inv hel hel hel hel";
+}
+
+.alt {
+  grid-area: alt;
+}
+
+.oms {
+  grid-area: oms;
+}
+
+.mad {
+  grid-area: mad;
+}
+
+.spl {
+  grid-area: spl;
+}
+
+.hel {
+  grid-area: hel;
+}
+
+.inv {
+  grid-area: inv;
 }
 
 .hover\:scale-105:hover {
@@ -1254,16 +1264,6 @@ html,
 }
 
 @media (min-width: 640px) {
-  .sm\:py-64 {
-    padding-top: 16rem;
-    padding-bottom: 16rem;
-  }
-
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .sm\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -1343,6 +1343,10 @@ html,
     gap: 2.5rem;
   }
 
+  .md\:gap-28 {
+    gap: 7rem;
+  }
+
   .md\:gap-4 {
     gap: 1rem;
   }
@@ -1353,6 +1357,10 @@ html,
 
   .md\:overflow-x-hidden {
     overflow-x: hidden;
+  }
+
+  .md\:rounded-\[57px\] {
+    border-radius: 57px;
   }
 
   .md\:rounded-tl-\[88px\] {
@@ -1376,6 +1384,10 @@ html,
   .md\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-2xl {
@@ -1441,20 +1453,16 @@ html,
     margin-top: 5rem;
   }
 
+  .lg\:mt-4 {
+    margin-top: 1rem;
+  }
+
   .lg\:mt-40 {
     margin-top: 10rem;
   }
 
   .lg\:mt-64 {
     margin-top: 16rem;
-  }
-
-  .lg\:mt-8 {
-    margin-top: 2rem;
-  }
-
-  .lg\:mt-4 {
-    margin-top: 1rem;
   }
 
   .lg\:block {
@@ -1475,6 +1483,30 @@ html,
 
   .lg\:w-96 {
     width: 24rem;
+  }
+
+  .lg\:w-\[100px\] {
+    width: 100px;
+  }
+
+  .lg\:w-\[108px\] {
+    width: 108px;
+  }
+
+  .lg\:w-\[121px\] {
+    width: 121px;
+  }
+
+  .lg\:w-\[204px\] {
+    width: 204px;
+  }
+
+  .lg\:w-\[234px\] {
+    width: 234px;
+  }
+
+  .lg\:w-\[446px\] {
+    width: 446px;
   }
 
   .lg\:flex-1 {
@@ -1503,11 +1535,6 @@ html,
 
   .lg\:gap-y-0 {
     row-gap: 0px;
-  }
-
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .lg\:py-16 {
@@ -1550,6 +1577,10 @@ html,
 }
 
 @media (min-width: 1280px) {
+  .xl\:mt-28 {
+    margin-top: 7rem;
+  }
+
   .xl\:text-10xl {
     font-size: 9.5rem;
   }
