--- a/style/main.css
+++ b/style/main.css
@@ -444,6 +444,12 @@ html,
   background-color: rgb(248 249 250 / var(--tw-bg-opacity));
 }
 
+body {
+  /* @apply overflow-hidden;
+    @apply h-full;
+    @apply w-full; */
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -629,10 +635,6 @@ html,
   margin-top: 2rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .block {
   display: block;
 }
@@ -655,6 +657,10 @@ html,
 
 .h-\[2px\] {
   height: 2px;
+}
+
+.h-\[3070px\] {
+  height: 3070px;
 }
 
 .h-full {
@@ -832,6 +838,10 @@ html,
 
 .overflow-visible {
   overflow: visible;
+}
+
+.overflow-scroll {
+  overflow: scroll;
 }
 
 .overflow-x-scroll {
@@ -1019,6 +1029,11 @@ html,
   color: rgb(233 236 239 / var(--tw-text-opacity));
 }
 
+.text-gray-6 {
+  --tw-text-opacity: 1;
+  color: rgb(108 117 125 / var(--tw-text-opacity));
+}
+
 .text-gray-7 {
   --tw-text-opacity: 1;
   color: rgb(73 80 87 / var(--tw-text-opacity));
@@ -1027,11 +1042,6 @@ html,
 .text-gray-9 {
   --tw-text-opacity: 1;
   color: rgb(33 37 41 / var(--tw-text-opacity));
-}
-
-.text-gray-6 {
-  --tw-text-opacity: 1;
-  color: rgb(108 117 125 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1103,6 +1113,12 @@ html,
   transition-duration: 150ms;
 }
 
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .delay-300 {
   transition-delay: 300ms;
 }
@@ -1129,6 +1145,10 @@ html,
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.will-change-transform {
+  will-change: transform;
 }
 
 @font-face {
@@ -1160,6 +1180,28 @@ html,
       format("woff2"),
     url("fonts/jokker/jokker-light-italic/jokker-lightitalic.woff")
       format("woff");
+}
+
+/* LENIS */
+
+html.lenis {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
 }
 
 /* ANIMATION */
@@ -1234,6 +1276,108 @@ html,
 
 .inv {
   grid-area: inv;
+}
+
+/* Title animation */
+
+@keyframes slideTitleUp {
+  0% {
+    transform: translate(0px, 120%);
+  }
+
+  100% {
+    transform: translate(0px, 0%);
+  }
+}
+
+.animated-title {
+  position: relative;
+  display: inline-block;
+  margin: -0.15em;
+  padding: 0.15em;
+  vertical-align: top;
+  overflow: hidden;
+}
+
+.animated-title-element {
+  position: relative;
+  display: inline-block;
+  transform: translate(0px, 120%);
+  will-change: auto;
+  animation-name: slideTitleUp;
+  animation-duration: 1.2s;
+  animation-delay: 0.05s;
+  animation-timing-function: cubic-bezier(0.34, 0.34, 0, 0.97);
+  animation-fill-mode: forwards;
+}
+
+.animated-title:nth-of-type(1) .animated-title-element {
+  animation-delay: 0.15s;
+}
+
+.animated-title:nth-of-type(2) .animated-title-element {
+  animation-delay: 0.3s;
+}
+
+.animated-title:nth-of-type(3) .animated-title-element {
+  animation-delay: 0.45s;
+}
+
+.animated-title:nth-of-type(4) .animated-title-element {
+  animation-delay: 0.6s;
+}
+
+.animated-title:nth-of-type(5) .animated-title-element {
+  animation-delay: 0.7s;
+}
+
+.animated-title:nth-of-type(6) .animated-title-element {
+  animation-delay: 0.75s;
+}
+
+/* Cards Animation */
+
+@keyframes slideDown {
+  0% {
+    transform: translate(0px, 20%);
+  }
+
+  100% {
+    transform: translate(0px, 0%);
+  }
+}
+
+.features a {
+  transform: translate(0px, 20%);
+  will-change: auto;
+  animation-name: slideDown;
+  animation-duration: 1.2s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+.features a:nth-of-type(1) {
+  animation-delay: 0.15s;
+}
+
+.features a:nth-of-type(2) {
+  animation-delay: 0.15s;
+}
+
+.features a:nth-of-type(3) {
+  animation-delay: 0.45s;
+}
+
+.features a:nth-of-type(5) {
+  animation-delay: 0.45s;
+}
+
+.features a:nth-of-type(4) {
+  animation-delay: 0.3s;
+}
+
+.features a:nth-of-type(6) {
+  animation-delay: 0.3s;
 }
 
 .hover\:scale-105:hover {
@@ -1315,10 +1459,6 @@ html,
     margin-top: 10rem;
   }
 
-  .md\:mt-4 {
-    margin-top: 1rem;
-  }
-
   .md\:mt-8 {
     margin-top: 2rem;
   }
@@ -1361,10 +1501,6 @@ html,
 
   .md\:gap-4 {
     gap: 1rem;
-  }
-
-  .md\:gap-8 {
-    gap: 2rem;
   }
 
   .md\:overflow-x-hidden {
