--- a/style/main.css
+++ b/style/main.css
@@ -590,6 +590,10 @@ body {
   order: 2;
 }
 
+.order-3 {
+  order: 3;
+}
+
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -629,6 +633,10 @@ body {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .block {
@@ -814,6 +822,14 @@ body {
 
 .gap-y-8 {
   row-gap: 2rem;
+}
+
+.self-start {
+  align-self: flex-start;
+}
+
+.self-end {
+  align-self: flex-end;
 }
 
 .self-center {
@@ -1331,9 +1347,7 @@ html.lenis {
 .button {
   position: relative;
   overflow: hidden;
-  order: 3;
   width: 100%;
-  align-self: flex-start;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 250 / var(--tw-bg-opacity));
@@ -1380,6 +1394,11 @@ html.lenis {
   transition: transform 0.3s;
 }
 
+.inverse.button {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
 .button:hover {
   transform: scaleX(1.02);
   transition: transform 0.6s cubic-bezier(0.34, 5.56, 0.64, 1);
@@ -1395,7 +1414,14 @@ html.lenis {
   bottom: 1px;
   z-index: 3;
   border: 1px solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(33 37 41 / var(--tw-border-opacity));
   border-radius: 1000px;
+}
+
+.inverse .button-cta-border {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 249 250 / var(--tw-border-opacity));
 }
 
 .button-cta-ripple {
@@ -1423,6 +1449,11 @@ html.lenis {
     border-radius 0.5s cubic-bezier(0.4, 0, 0, 1);
 }
 
+.inverse .button-cta-ripple span {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+}
+
 .button-cta:hover .button-cta-ripple span {
   border-radius: 0;
   transform: translateY(0);
@@ -1440,6 +1471,13 @@ html.lenis {
 .button-cta-title span {
   display: block;
   transition: transform 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity));
+}
+
+.inverse .button-cta-title span {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 250 / var(--tw-text-opacity));
 }
 
 .button-cta:hover .button-cta-title span {
@@ -1455,6 +1493,11 @@ html.lenis {
   left: 0;
   --tw-text-opacity: 1;
   color: rgb(248 249 250 / var(--tw-text-opacity));
+}
+
+.inverse .button-cta-title span:after {
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity));
 }
 
 .hover\:scale-105:hover {
@@ -1539,6 +1582,10 @@ html.lenis {
 
   .md\:w-72 {
     width: 18rem;
+  }
+
+  .md\:w-\[680px\] {
+    width: 680px;
   }
 
   .md\:grid-cols-5 {
@@ -1645,6 +1692,14 @@ html.lenis {
 
   .lg\:mt-64 {
     margin-top: 16rem;
+  }
+
+  .lg\:mt-40 {
+    margin-top: 10rem;
+  }
+
+  .lg\:mt-32 {
+    margin-top: 8rem;
   }
 
   .lg\:block {
